# echo

./: LICENSE  README.md
docker/: .Dockerfile  Dockerfile
ros2_workspace/: .gitignore
ros2_workspace/src/echo/: MANIFEST.in  package.xml  setup.cfg  setup.py
ros2_workspace/src/echo/echo/: audio_capture_node.py  echo_node.py  initialization.py  sound_player.py  speech_ai.py  speech_logger.py  stt_onboard.py  tts_onboard.py
ros2_workspace/src/echo/launch/: all_nodes.launch.py
