<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>echo</name>
  <version>0.0.0</version>
  <description>Interactive voice chat system</description>
  <maintainer email="steven@vangemert.dev">Steven</maintainer>
  <license>AGPL-3.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- runtime dependencies provided by your ROS 2 install -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Python-only runtime dependencies (installed via pip) -->
  <exec_depend>pocketsphinx</exec_depend>
  <exec_depend>pyaudio</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>sounddevice</exec_depend>
  <exec_depend>pyttsx3</exec_depend>
  <exec_depend>requests</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <lauch>
      <file>launch/all_nodes.launch.py</file>
    </lauch>
  </export>
</package>
